added ALP automation

--- a/ALP Calibration/ALP_interface.ipynb
+++ b/ALP Calibration/ALP_interface.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,14 +47,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "DEBUG:root:Terminated - alp.exe Pid-13360\n",
+      "DEBUG:root:Terminated - alp.exe Pid-21204\n",
       "DEBUG:root:Started New file test.alw\n"
      ]
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,8 +113,8 @@
     "\n",
     "    # Need to set to Specified_PY\n",
     "    proj.SetSoilModel(1)\n",
-    "    column_str =['p0','y0','p2','y2','p4','y4','p6','y6','p8','y8','p12','y12']\n",
-    "    df_alp = df[['Depth','p0','y0','p2','y2','p4','y4','p6','y6','p8','y8','p12','y12']].copy()\n",
+    "    column_str =['pcy0','ycy0','pcy2','ycy2','pcy4','ycy4','pcy6','ycy6','pcy8','ycy8','pcy12','ycy12']\n",
+    "    df_alp = df[['Depth','pcy0','ycy0','pcy2','ycy2','pcy4','ycy4','pcy6','ycy6','pcy8','ycy8','pcy12','ycy12']].copy()\n",
     "    df_alp['Level'] = df_alp.Depth*-1\n",
     "    df_alp= df_alp.dropna()\n",
     "    # proj.ClearNodes()\n",
@@ -122,9 +122,6 @@
     "        proj.InsertNode(row['Level'],1)\n",
     "        proj.AddNodePY(*(row[column_str].values.tolist()))\n",
     "    df_load_disp_curve = pd.DataFrame()\n",
-    "    force = []\n",
-    "    disp = []\n",
-    "    rotation = []\n",
     "    i = 0\n",
     "    for f in tqdm(np.linspace(0,5000,21)):\n",
     "        model.set_node_load_displacement(1,f*-1,0,0)\n",
@@ -147,30 +144,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '../p-y curves cyclic - CPT04.xlsx'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\dazhong.li\\OneDrive - Arup\\01 - Project\\UnitCPT\\UnitCPT\\ALP Calibration\\ALP_interface.ipynb Cell 7\u001b[0m line \u001b[0;36m2\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/dazhong.li/OneDrive%20-%20Arup/01%20-%20Project/UnitCPT/UnitCPT/ALP%20Calibration/ALP_interface.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m case \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mSUMMARY-Static\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/dazhong.li/OneDrive%20-%20Arup/01%20-%20Project/UnitCPT/UnitCPT/ALP%20Calibration/ALP_interface.ipynb#W6sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39;49mread_excel(\u001b[39m'\u001b[39;49m\u001b[39m../p-y curves cyclic - CPT04.xlsx\u001b[39;49m\u001b[39m'\u001b[39;49m,sheet_name\u001b[39m=\u001b[39;49mcase,skiprows\u001b[39m=\u001b[39;49m\u001b[39m2\u001b[39;49m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/dazhong.li/OneDrive%20-%20Arup/01%20-%20Project/UnitCPT/UnitCPT/ALP%20Calibration/ALP_interface.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m df\u001b[39m.\u001b[39mdrop([\u001b[39m0\u001b[39m,\u001b[39m1\u001b[39m],axis\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m,inplace\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/dazhong.li/OneDrive%20-%20Arup/01%20-%20Project/UnitCPT/UnitCPT/ALP%20Calibration/ALP_interface.ipynb#W6sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m df_load_disp_curve \u001b[39m=\u001b[39m calc_displacement_curve(df,\u001b[39mr\u001b[39m\u001b[39m'\u001b[39m\u001b[39mC:\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mUsers\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mdazhong.li\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mOneDrive - Arup\u001b[39m\u001b[39m\\\u001b[39m\u001b[39m01 - Project\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mUnitCPT\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mUnitCPT\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mALP Calibration\u001b[39m\u001b[39m'\u001b[39m\u001b[39m+\u001b[39m\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m\\\u001b[39m\u001b[39m{\u001b[39;00mcase\u001b[39m}\u001b[39;00m\u001b[39m.alw\u001b[39m\u001b[39m'\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\dazhong.li\\AppData\\Local\\miniconda3\\envs\\UnitCPT\\lib\\site-packages\\pandas\\util\\_decorators.py:211\u001b[0m, in \u001b[0;36mdeprecate_kwarg.<locals>._deprecate_kwarg.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    209\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    210\u001b[0m         kwargs[new_arg_name] \u001b[39m=\u001b[39m new_arg_value\n\u001b[1;32m--> 211\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
-      "File \u001b[1;32mc:\\Users\\dazhong.li\\AppData\\Local\\miniconda3\\envs\\UnitCPT\\lib\\site-packages\\pandas\\util\\_decorators.py:331\u001b[0m, in \u001b[0;36mdeprecate_nonkeyword_arguments.<locals>.decorate.<locals>.wrapper\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m    325\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(args) \u001b[39m>\u001b[39m num_allow_args:\n\u001b[0;32m    326\u001b[0m     warnings\u001b[39m.\u001b[39mwarn(\n\u001b[0;32m    327\u001b[0m         msg\u001b[39m.\u001b[39mformat(arguments\u001b[39m=\u001b[39m_format_argument_list(allow_args)),\n\u001b[0;32m    328\u001b[0m         \u001b[39mFutureWarning\u001b[39;00m,\n\u001b[0;32m    329\u001b[0m         stacklevel\u001b[39m=\u001b[39mfind_stack_level(),\n\u001b[0;32m    330\u001b[0m     )\n\u001b[1;32m--> 331\u001b[0m \u001b[39mreturn\u001b[39;00m func(\u001b[39m*\u001b[39margs, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n",
-      "File \u001b[1;32mc:\\Users\\dazhong.li\\AppData\\Local\\miniconda3\\envs\\UnitCPT\\lib\\site-packages\\pandas\\io\\excel\\_base.py:482\u001b[0m, in \u001b[0;36mread_excel\u001b[1;34m(io, sheet_name, header, names, index_col, usecols, squeeze, dtype, engine, converters, true_values, false_values, skiprows, nrows, na_values, keep_default_na, na_filter, verbose, parse_dates, date_parser, thousands, decimal, comment, skipfooter, convert_float, mangle_dupe_cols, storage_options)\u001b[0m\n\u001b[0;32m    480\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(io, ExcelFile):\n\u001b[0;32m    481\u001b[0m     should_close \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m--> 482\u001b[0m     io \u001b[39m=\u001b[39m ExcelFile(io, storage_options\u001b[39m=\u001b[39;49mstorage_options, engine\u001b[39m=\u001b[39;49mengine)\n\u001b[0;32m    483\u001b[0m \u001b[39melif\u001b[39;00m engine \u001b[39mand\u001b[39;00m engine \u001b[39m!=\u001b[39m io\u001b[39m.\u001b[39mengine:\n\u001b[0;32m    484\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m    485\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mEngine should not be specified when passing \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    486\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39man ExcelFile - ExcelFile already has the engine set\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    487\u001b[0m     )\n",
-      "File \u001b[1;32mc:\\Users\\dazhong.li\\AppData\\Local\\miniconda3\\envs\\UnitCPT\\lib\\site-packages\\pandas\\io\\excel\\_base.py:1652\u001b[0m, in \u001b[0;36mExcelFile.__init__\u001b[1;34m(self, path_or_buffer, engine, storage_options)\u001b[0m\n\u001b[0;32m   1650\u001b[0m     ext \u001b[39m=\u001b[39m \u001b[39m\"\u001b[39m\u001b[39mxls\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1651\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m-> 1652\u001b[0m     ext \u001b[39m=\u001b[39m inspect_excel_format(\n\u001b[0;32m   1653\u001b[0m         content_or_path\u001b[39m=\u001b[39;49mpath_or_buffer, storage_options\u001b[39m=\u001b[39;49mstorage_options\n\u001b[0;32m   1654\u001b[0m     )\n\u001b[0;32m   1655\u001b[0m     \u001b[39mif\u001b[39;00m ext \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m   1656\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[0;32m   1657\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39mExcel file format cannot be determined, you must specify \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1658\u001b[0m             \u001b[39m\"\u001b[39m\u001b[39man engine manually.\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m   1659\u001b[0m         )\n",
-      "File \u001b[1;32mc:\\Users\\dazhong.li\\AppData\\Local\\miniconda3\\envs\\UnitCPT\\lib\\site-packages\\pandas\\io\\excel\\_base.py:1525\u001b[0m, in \u001b[0;36minspect_excel_format\u001b[1;34m(content_or_path, storage_options)\u001b[0m\n\u001b[0;32m   1522\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(content_or_path, \u001b[39mbytes\u001b[39m):\n\u001b[0;32m   1523\u001b[0m     content_or_path \u001b[39m=\u001b[39m BytesIO(content_or_path)\n\u001b[1;32m-> 1525\u001b[0m \u001b[39mwith\u001b[39;00m get_handle(\n\u001b[0;32m   1526\u001b[0m     content_or_path, \u001b[39m\"\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m\"\u001b[39;49m, storage_options\u001b[39m=\u001b[39;49mstorage_options, is_text\u001b[39m=\u001b[39;49m\u001b[39mFalse\u001b[39;49;00m\n\u001b[0;32m   1527\u001b[0m ) \u001b[39mas\u001b[39;00m handle:\n\u001b[0;32m   1528\u001b[0m     stream \u001b[39m=\u001b[39m handle\u001b[39m.\u001b[39mhandle\n\u001b[0;32m   1529\u001b[0m     stream\u001b[39m.\u001b[39mseek(\u001b[39m0\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\dazhong.li\\AppData\\Local\\miniconda3\\envs\\UnitCPT\\lib\\site-packages\\pandas\\io\\common.py:865\u001b[0m, in \u001b[0;36mget_handle\u001b[1;34m(path_or_buf, mode, encoding, compression, memory_map, is_text, errors, storage_options)\u001b[0m\n\u001b[0;32m    856\u001b[0m         handle \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39m(\n\u001b[0;32m    857\u001b[0m             handle,\n\u001b[0;32m    858\u001b[0m             ioargs\u001b[39m.\u001b[39mmode,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    861\u001b[0m             newline\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m\"\u001b[39m,\n\u001b[0;32m    862\u001b[0m         )\n\u001b[0;32m    863\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m    864\u001b[0m         \u001b[39m# Binary mode\u001b[39;00m\n\u001b[1;32m--> 865\u001b[0m         handle \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39;49m(handle, ioargs\u001b[39m.\u001b[39;49mmode)\n\u001b[0;32m    866\u001b[0m     handles\u001b[39m.\u001b[39mappend(handle)\n\u001b[0;32m    868\u001b[0m \u001b[39m# Convert BytesIO or file objects passed with an encoding\u001b[39;00m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '../p-y curves cyclic - CPT04.xlsx'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "DEBUG:root:Started New file test.alw\n",
+      "100%|██████████| 21/21 [00:05<00:00,  4.00it/s]\n",
+      "100%|██████████| 21/21 [00:00<00:00, 48.65it/s]\n",
+      "DEBUG:root:C:\\Users\\dazhong.li\\OneDrive - Arup\\01 - Project\\UnitCPT\\UnitCPT\\ALP Calibration\\SUMMARY-Cyclic.alwsaved successfully\n"
      ]
     }
    ],
    "source": [
-    "case = 'SUMMARY-Static'\n",
-    "df = pd.read_excel('../p-y curves cyclic - CPT04.xlsx',sheet_name=case,skiprows=2)\n",
+    "case = 'SUMMARY-Cyclic'\n",
+    "df = pd.read_excel('p-y curves cyclic - CPT04.xlsx',sheet_name=case,skiprows=2)\n",
     "df.drop([0,1],axis=0,inplace=True)\n",
     "df_load_disp_curve = calc_displacement_curve(df,r'C:\\Users\\dazhong.li\\OneDrive - Arup\\01 - Project\\UnitCPT\\UnitCPT\\ALP Calibration'+f'\\{case}.alw')\n",
     "df_load_disp_curve.to_json(f'{case}.json')"
@@ -178,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1619,7 +1609,6 @@
           0.55,
           1
          ],
-         "showgrid": true,
          "title": {
           "text": "Pile Head Rotation (rad)"
          }
@@ -1630,7 +1619,6 @@
           0,
           0.45
          ],
-         "showgrid": true,
          "title": {
           "text": "Pile Head Rotation (rad)"
          }
@@ -1641,7 +1629,6 @@
           0.55,
           1
          ],
-         "showgrid": true,
          "title": {
           "text": "Pile Head Displacement (mm)"
          }
@@ -1662,8 +1649,7 @@
          "domain": [
           0.575,
           1
-         ],
-         "showgrid": true
+         ]
         },
         "yaxis3": {
          "anchor": "x3",
@@ -1671,7 +1657,6 @@
           0,
           0.425
          ],
-         "showgrid": true,
          "title": {
           "text": "Applied Lateral Force at Pile Head(kN)"
          }
@@ -1681,8 +1666,7 @@
          "domain": [
           0,
           0.425
-         ],
-         "showgrid": true
+         ]
         }
        }
       }
